# napari-nninteractive

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/napari_nninteractive/: __init__.py  napari.yaml  widget_controls.py  widget_gui.py  widget_main.py
src/napari_nninteractive/_tests/: test_widget.py
src/napari_nninteractive/controls/: bbox_controls.py  lasso_controls.py  point_controls.py  scribble_controls.py
src/napari_nninteractive/layers/: abstract_layer.py  bbox_layer.py  lasso_layer.py  point_layer.py  scribble_layer.py
src/napari_nninteractive/napari_utils/: icon_factory.py  widget_factory.py
src/napari_nninteractive/napari_utils/widgets/: collabsable_groubox.py  layer_selection_widget.py  switch_widget.py  tooltip_combobox.py
src/napari_nninteractive/utils/: affine.py  utils.py
src/napari_nninteractive/widgets/: layer_selection_widget.py  switch_widget.py  tooltip_combobox.py  widget_helpers.py
